--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="text" href="STACK" />
+    <link rel="icon" type="image/svg+xml" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.scaler.com%2Ftopics%2Fstack-operations-in-data-structures%2F&psig=AOvVaw29iIn0RtnBv2wEOWYlBq5F&ust=1704606571269000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCMD84b6IyIMDFQAAAAAdAAAAABAD" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>STACK Implimentation</title>
   </head>
